--- a/workshop.html
+++ b/workshop.html
@@ -16,13 +16,16 @@
 </head>
 <body>
     <h1>Fun Facts About Potatoes</h1>
-    <ul>
-        <li>Potatoes are native to South America, specifically the Andean region of Peru and Bolivia.</li>
-        <li>They are the world’s fourth-largest food crop, following rice, wheat, and maize.</li>
-        <li>There are over 4,000 varieties of potatoes!</li>
-        <li>Potatoes are 80% water.</li>
-        <li>In the 16th century, potatoes were believed to be poisonous in Europe.</li>
-        <li>Potatoes were the first vegetable grown in space!</li>
-    </ul>
+    <div>
+        <ul>
+            <li>Potatoes are native to South America, specifically the Andean region of Peru and Bolivia.</li>
+            <li>They are the world’s fourth-largest food crop, following rice, wheat, and maize.</li>
+            <li>There are over 4,000 varieties of potatoes!</li>
+            <li>Potatoes are 80% water.</li>
+            <li>In the 16th century, potatoes were believed to be poisonous in Europe.</li>
+            <li>Potatoes were the first vegetable grown in space!</li>
+        </ul>
+    </div>
+    <img src="https://media.istockphoto.com/id/1475113258/photo/raw-potatoes-freshly-cut-in-half-isolated-on-white-background.jpg?s=612x612&w=0&k=20&c=xDNuQsCL21UAN0gRFw1kFoaxev9zlkbn7Ji5rTmu9Hw=">
 </body>
 </html>
